# revv

./: .env  .env.example  .gitignore  CLAUDE.md  FileDiff.ts  LICENSE  Makefile  README.md  biome.json  icons_list.txt  install.ps1  install.sh  package.json  tsconfig.base.json  turbo.json  types.ts
.claude/skills/better-auth/: SKILL.md  api-reference.md  best-practices.md  examples.md
.claude/skills/electrobun/: SKILL.md  api-reference.md
.claude/skills/kobalte/: SKILL.md  api-reference.md  best-practices.md  examples.md
.claude/skills/libghostty/: SKILL.md
.claude/skills/shadcn-solid/: SKILL.md  api-reference.md  (+2 more)
.openlogs/: bun-dev-desktop.2026-04-16T16-28-14Z.txt  bun-dev-desktop.2026-04-16T16-52-30Z.txt  bun-dev-desktop.txt  collector.json  latest.txt  runs.jsonl
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop-electrobun/: .gitignore  README.md  electrobun.config.ts  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/landing-page/: landing_page.html
apps/server/: drizzle.config.ts  package.json  tsconfig.json
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web-solid/: package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
docs/: updater-setup.md
docs/prds/: 01-comment-persistence.md  02-ai-context-panel.md  03-ai-walkthrough.md  04-github-sync.md  05-post-review-agent.md  06-polish-ship.md  README.md
scripts/: install-macos.sh  revv
scripts/lib/: common.sh
(+319 files in other folders)
