[package]
name = "revv-desktop"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-mcp-bridge = "0.11"
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
